mobile map: load article media via ajax (including video and audio)

--- a/typo3conf/ext/wpj/Resources/Private/mobileTemplates/map/index.html
+++ b/typo3conf/ext/wpj/Resources/Private/mobileTemplates/map/index.html
@@ -136,7 +136,9 @@
 					<div class="scroll-content">
 					<h3></h3>
 					<div class="body"> </div>
-					<ul class="itemlist"></ul>
+					
+					<div id="articleMedia"></div>
+					
 					</div>
 				</div>
 			</div>
@@ -153,6 +155,7 @@
 		var loadFloorUrl = '<wpj:actionUrl action="listFloorOptions" pageType="10"/>';
 		var loadRoomUrl = '<wpj:actionUrl action="listRoomArticles" pageType="10"/>';
 		var loadArticleUrl = '<wpj:actionUrl action="showArticle" pageType="10"/>';
+		var loadArticleMediaUrl = '<wpj:actionUrl action="loadMedia" pageType="10"/>';
 		// -->
 	</script>
 
